<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="353dp"
        android:layout_height="593dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:baselineAligned="false"
        app:cardBackgroundColor="#8BAFE6"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="590dp"
            android:layout_gravity="center"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_initial"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_initial"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_info" />

            <TableLayout
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/txt_campo1"
                            android:layout_width="265dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:ems="10"
                            android:textSize="20dp"
                            android:hint="@string/txt_campo1"
                            android:inputType="text"
                            android:textAlignment="center"
                            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">


                        <TextView
                            android:id="@+id/tvSeleccionar"
                            android:layout_width="42dp"
                            android:textSize="30sp"
                            android:layout_height="wrap_content"
                            android:text="@string/tvSeleccionar" />

                        <EditText
                            android:id="@+id/txt_campo2"
                            android:layout_width="195dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="@string/txt_campo2"
                            android:inputType="date"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                    </TableRow>
                </LinearLayout>



                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/txt_campo3"
                        android:layout_width="238dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:textSize="20dp"
                        android:hint="@string/txt_campo3"
                        android:inputType="phone"
                        android:textAlignment="center"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                </TableRow>


                <TableRow
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/txt_email"
                        android:layout_width="249dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:textSize="20sp"
                        android:hint="@string/txt_email"
                        android:inputType="textEmailAddress"
                        android:textAlignment="center"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="bottom|center|center_horizontal|center_vertical">

                    <EditText
                        android:id="@+id/txt_Descripcion"
                        android:layout_width="274dp"
                        android:layout_height="89dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:gravity="top"
                        android:textSize="20sp"
                        android:hint="@string/txt_Descripcion"
                        android:inputType="textMultiLine"
                        android:minHeight="25dp"
                        android:textColor="#000000"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btnSiguiente"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnSiguiente"
                android:onClick="Siguiente"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#000000"
                app:strokeColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>